--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="./css/main.css" rel="stylesheet">
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+
 <!--
     UI 만드는 step
     1. HTML/CSS로 미리 UI 디자인하기
     2. 버튼 누르면 UI 보여주기
 -->
+
 <body>
+    <!-- 로그인 모달창 Start -->
+    <div class="black-bg">
+        <div class="white-bg">
+            <h4>로그인하세요</h4>
+            <form action="success.html">
+                <div class="my-3">
+                    <input type="text" class="form-control">
+                </div>
+                <div class="my-3">
+                    <input type="password" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary">전송</button>
+                <button type="button" class="btn btn-danger" id="close">닫기</button>
+            </form>
+            <button class="btn btn-danger" id="close">닫기</button>
+        </div>
+    </div>
+    <!-- 로그인 모달창 End -->
+
+    <!-- Navigation bar Start -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <span class="navbar-brand">Navbar</span>
@@ -19,7 +48,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
-    </nav> 
+    </nav>
     <ul class="list-group">
         <li class="list-group-item">An item</li>
         <li class="list-group-item">A second item</li>
@@ -27,47 +56,83 @@
         <li class="list-group-item">A fourth item</li>
         <li class="list-group-item">And a fifth one</li>
     </ul>
+    <!-- Navigation bar End -->
 
-
-
-   <div class="alert-box" id="alert">
-        <p id="alert_box"></p>
-        <button id="close">닫기</button>
+    <!-- Main Start -->
+    <div class="main-bg">
+        <h4>Shirts on Sale</h4>
+        <button type="button" id="sign_check" class="btn btn-primary">Sign-In</button>
     </div>
-    <button onclick="alertText('alert', '아이디')">아이디 입력</button>
-    <button onclick="alertText('alert', '비밀번호')">비밀번호 입력</button>
+    <!-- Main End -->
 
-    <button type="button" class="btn btn-primary">Primary</button>
-   <script>
+    <script>
+
         /**
-         * 주의 사항
-         * 1. HTML 파일은 위에서 밑으로 읽기 때문에 조작할 HTML의 하단에 script code를 작성해야 한다.
-         * 2. Selector 오타 주의
-         * 3. 기본 문법 오타 주의
+         *  애니메이션 만드는 법칙
+         *  one-way UI 애니메이션
+         *  - A상태 -> B상태로 이동
+         *  1. 시작 스타일
+         *  2. 최종 스타일
+         *  3. 원할 때 최종스타일로 변하게끔 코드 작성
+         *  4. transition 추가
          */
 
+        /**
+         * 주의
+         * 1. $('셀렉터')로 찾으면 jQuery 함수만 사용가능
+         * 2. querySelector('셀렉터')로 찾으면 자바스크립트 함수만 사용 가능
+         */
 
         // EventListener의 클릭 이벤트로 클래스 추가하기
-        document.querySelector('.navbar-toggler').addEventListener('click', ()=>{
-            document.querySelector('.list-group').classList.toggle('show');
+        document.querySelector('.navbar-toggler').addEventListener('click', () => {
+            // classList.add() : 해당 클래스에 클래스를 추가
+            // classList.toggle() : 해당 클래스가 없으면 추가, 있으면 제거
+            document.querySelector('.list-group').classList.toggle('slide');
         })
 
-        document.querySelector('#close').addEventListener('click', ()=>{
-            tagShowAndHide('alert', 'none');
+        $('#sign_check').on('click', () => {
+            // document.querySelector('.black-bg').classList.add('show-modal');
+            $('.black-bg').addClass('show-modal');
+            // $('.black-bg').css('display','block');
         });
 
+        $('#close').on('click', () => {
+            // document.querySelector('.black-bg').classList.remove('show-modal');
+            $('.black-bg').removeClass('show-modal');
+            // $('.black-bg').css('display','none');
+        });
 
-        // Layout show & hide
-        const tagShowAndHide = (id, state) => {
-            document.getElementById(id).style.display = state;
-        }
+        /*
+            // jQuery
+            // document.querySelector('.hello').innerHTML = "안녕하세요";
+            $('.hello').html("안녕하세요");
 
-        const alertText = (id, content) => {
-            tagShowAndHide(id, 'block');
-            document.getElementById('alert_box').innerHTML = content+"를 입력하세요.";
-        }
+            // CSS 변경
+            $('.hello').css('color', 'red');
 
-   </script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            // 클래스 추가
+            $('.hello').addClass('show');
+            
+            // 클래스 제거
+            $('.hello').removeClass('show');
+            
+            // 클래스 토글
+            $('.hello').toggleClass('show');
+
+            document.querySelector('#test-btn').addEventListener('click',()=>{})
+            $('#test-btn').on('click',()=>{
+                $('.hello').slideUp();
+            })
+        */
+
+    </script>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+
 </body>
+
 </html>
