--- a/study-03.html
+++ b/study-03.html
@@ -69,14 +69,21 @@
 
     <script>
 
-        // 전송 버튼 누르면 input에 입력한 값이 없으면 알림창
-        const validate = () => {
-            if(3==1){
+        /**
+         *  애니메이션 만드는 법칙
+         *  one-way UI 애니메이션
+         *  - A상태 -> B상태로 이동
+         *  1. 시작 스타일
+         *  2. 최종 스타일
+         *  3. 원할 때 최종스타일로 변하게끔 코드 작성
+         *  4. transition 추가
+         */
 
-            } else {
-
-            }
-        }
+        /**
+         * 주의
+         * 1. $('셀렉터')로 찾으면 jQuery 함수만 사용가능
+         * 2. querySelector('셀렉터')로 찾으면 자바스크립트 함수만 사용 가능
+         */
 
         // EventListener의 클릭 이벤트로 클래스 추가하기
         document.querySelector('.navbar-toggler').addEventListener('click', () => {
@@ -96,6 +103,30 @@
             $('.black-bg').removeClass('show-modal');
             // $('.black-bg').css('display','none');
         });
+
+        /*
+            // jQuery
+            // document.querySelector('.hello').innerHTML = "안녕하세요";
+            $('.hello').html("안녕하세요");
+
+            // CSS 변경
+            $('.hello').css('color', 'red');
+
+            // 클래스 추가
+            $('.hello').addClass('show');
+            
+            // 클래스 제거
+            $('.hello').removeClass('show');
+            
+            // 클래스 토글
+            $('.hello').toggleClass('show');
+
+            document.querySelector('#test-btn').addEventListener('click',()=>{})
+            $('#test-btn').on('click',()=>{
+                $('.hello').slideUp();
+            })
+        */
+
     </script>
 
     <!-- Bootstrap -->
