--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         });
 
         // input event 2
-        document.querySelector('#id').addEventListener('input', ()=>{
+        document.querySelector('#pw').addEventListener('input', ()=>{
             console.log(document.querySelector('#pw').value);
         });
 
