--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     <!-- 로그인 모달창 End -->
 
     <!-- Navigation bar Start -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light" id="navigation">
         <div class="container-fluid">
             <a href="index.html"><span class="navbar-brand">MAIN</span></a>
+            <span class="badge bg-dark">Dark🔄 </span>
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -68,10 +69,33 @@
     <!-- Main End -->
 
     <script>
+        var count = 0;
+
+        // Dark 버튼 클릭 시 Light로 바꾸기
+        document.querySelector('.badge').addEventListener('click', ()=>{
+            if(count%2 === 0){
+                document.querySelector('.badge').innerHTML = "Light🔄";
+                document.querySelector('body').classList.add('dark');
+                document.querySelector('#navigation').classList.remove('navbar-light');
+                document.querySelector('#navigation').classList.remove('bg-light');
+                document.querySelector('#navigation').classList.add('navbar-light');
+                document.querySelector('#navigation').classList.add('bg-dark');
+            } else {
+                document.querySelector('.badge').innerHTML = "Dark🔄";
+                document.querySelector('body').classList.remove('dark');
+                document.querySelector('#navigation').classList.add('navbar-light');
+                document.querySelector('#navigation').classList.add('bg-light');
+                document.querySelector('#navigation').classList.remove('navbar-light');
+                document.querySelector('#navigation').classList.remove('bg-dark');
+                
+            }
+            count++;
+        });
+
         // Navigation menu open
         document.querySelector('.navbar-toggler').addEventListener('click', () => {
             document.querySelector('.list-group').classList.toggle('slide');
-        })
+        });
 
         $('#sign_check').on('click', () => {
             $('.black-bg').addClass('show-modal');
