--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <nav class="navbar navbar-light bg-light" id="navigation">
         <div class="container-fluid">
             <a href="index.html"><span class="navbar-brand">Shopping</span></a>
-            <span class="badge bg-dark">Dark🔄 </span>
+            <div style="float: right;">
+                <span class="badge bg-dark">Dark🔄 </span>
+            </div>
             <button class="navbar-toggler" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
