--- a/detail.html
+++ b/detail.html
@@ -60,8 +60,9 @@
 </head>
 
 <body>
-
+    
     <div class="container mt-5">
+        <a href="/index.html">인덱스로</a><br /><br />
         <ul class="list">
             <li class="tab-button">Products</li>
             <li class="tab-button orange">Information</li>
