--- a/detail.html
+++ b/detail.html
@@ -64,10 +64,10 @@
     <div class="container mt-5">
         <a href="/index.html">인덱스로</a><br /><br />
         <ul class="list">
-            <li class="tab-button">Products</li>
-            <li class="tab-button orange">Information</li>
-            <li class="tab-button">Shipping</li>
-            <li class="tab-button">About</li>
+            <li class="tab-button" data-id="0">Products</li>
+            <li class="tab-button orange" data-id="1">Information</li>
+            <li class="tab-button" data-id="2">Shipping</li>
+            <li class="tab-button" data-id="3">About</li>
         </ul>
 
         <div class="tab-content">
