--- a/detail.html
+++ b/detail.html
@@ -63,8 +63,8 @@
     
     <div class="container mt-3">
         <div class="card p-3">
-            <p>상품명 / 가격</p>
-            <p id="product"></p>
+            <p class="car-title"></p>
+            <p class="car-price"></p>
         </div>
     </div>
     <script>
@@ -81,15 +81,16 @@
          */
 
          var car = ['소나타', 50000, 'white'];
-         var car2 = {name: '소나타', price: 50000};
+         var car2 = {name: '소나타', price: [50000, 30000, 40000]};
 
          // array 정렬
          car.sort();
          // 1번부터 y번전까지 자르기
          var car3 = car.slice(1,3)
 
-         // object HTML에 적용하기
-         document.querySelector('#product').innerHTML = `${car2.name} / ${car2.price}`; 
+         // object HTML에 적용하기 (데이터 바인딩 : 데이터를 원하는 위치에 놓는 것)
+         document.querySelector('.car-title').innerHTML = ` 상품명 : ${car2.name}`; 
+         document.querySelector('.car-price').innerHTML = ` 가격 : ${car2.price[0]}`; 
     </script>
 
     <div class="container mt-5">
